src/main/java/com/example/productapi/error/Exception/NotFoundException.java
package com.example.productapi.error.Exception;

public class NotFoundException extends RuntimeException  {

    public NotFoundException(String massage){
        super(massage);
    }
}
